
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_8__ TYPE_3__ ;
typedef struct TYPE_7__ TYPE_2__ ;
typedef struct TYPE_6__ TYPE_1__ ;


typedef size_t WORD ;
struct TYPE_8__ {scalar_t__ CurrentPsp; } ;
struct TYPE_7__ {int RefCount; } ;
struct TYPE_6__ {size_t HandleTableSize; int HandleTablePtr; } ;
typedef TYPE_1__* PDOS_PSP ;
typedef TYPE_2__* PDOS_FILE_DESCRIPTOR ;
typedef int* LPBYTE ;
typedef int BYTE ;


 int DPRINT (char*,int) ;
 TYPE_2__* DosGetFileDescriptor (int) ;
 scalar_t__ FAR_POINTER (int ) ;
 size_t INVALID_DOS_HANDLE ;
 TYPE_1__* SEGMENT_TO_PSP (scalar_t__) ;
 scalar_t__ SYSTEM_PSP ;
 TYPE_3__* Sda ;

WORD DosOpenHandle(BYTE DescriptorId)
{
    WORD DosHandle;
    PDOS_PSP PspBlock;
    LPBYTE HandleTable;
    PDOS_FILE_DESCRIPTOR Descriptor = DosGetFileDescriptor(DescriptorId);

    DPRINT("DosOpenHandle: DescriptorId 0x%02X\n", DescriptorId);


    if (Descriptor == ((void*)0)) return INVALID_DOS_HANDLE;


    if (Sda->CurrentPsp == SYSTEM_PSP) return INVALID_DOS_HANDLE;


    PspBlock = SEGMENT_TO_PSP(Sda->CurrentPsp);
    HandleTable = (LPBYTE)FAR_POINTER(PspBlock->HandleTablePtr);


    for (DosHandle = 0; DosHandle < PspBlock->HandleTableSize; DosHandle++)
    {
        if (HandleTable[DosHandle] == 0xFF) break;
    }


    if (DosHandle == PspBlock->HandleTableSize) return INVALID_DOS_HANDLE;


    Descriptor->RefCount++;


    HandleTable[DosHandle] = DescriptorId;


    return DosHandle;
}
